--- a/pie/app/src/selection/selection.css
+++ b/pie/app/src/selection/selection.css
@@ -55,3 +55,11 @@
     font-weight: bold;
     font-size: medium;
 }
+
+.chip-icon{
+    height: 20px;
+    width: 20px;
+    min-height: 20px;
+    min-width: 20px;
+
+}
