-- added likeness factor calculation. -- added category search

--- a/pie/app/src/selection/selection.css
+++ b/pie/app/src/selection/selection.css
@@ -64,3 +64,17 @@
     min-width: 20px;
     cursor: pointer;
 }
+
+.search-result {
+    cursor: default;
+    border-radius: 16px;
+    display: block;
+    height: 32px;
+    line-height: 32px;
+    margin: 8px 8px 0 0;
+    padding: 0 12px 0 12px;
+    float: left;
+    box-sizing: border-box;
+    max-width: 100%;
+    position: relative;
+}
