--- a/pie/app/src/selection/components/categoryAnalysis/categoryAnalysis.html
+++ b/pie/app/src/selection/components/categoryAnalysis/categoryAnalysis.html
@@ -1,5 +1,5 @@
 <div ng-if="vm.data">
     <canvas id="line" class="chart chart-line" chart-data="vm.data"
-            chart-labels="vm.labels" chart-series="vm.series">
+            chart-labels="vm.labels" chart-series="vm.series" chart-options="{legend:{display:true}}">
     </canvas>
 </div>
