--- a/pie/app/src/selection/selection.css
+++ b/pie/app/src/selection/selection.css
@@ -43,9 +43,14 @@
 }
 
 .header-container {
-    margin-bottom: 10px;
-    margin-right: 15px;
-    padding-left: 10px;
+    margin-top: 18.76px;
+    margin-bottom: 18.76px;
+    margin-left:68%;
+    margin-right: 10px;
+}
+
+.switch-button{
+    min-width: 148px;
 }
 
 .review-content {
