--- a/pie/app/src/selection/selection.css
+++ b/pie/app/src/selection/selection.css
@@ -43,13 +43,19 @@
 }
 
 .header-container {
-    margin-top: 18.76px;
-    margin-bottom: 18.76px;
-    margin-left:68%;
-    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-right: 15px;
+    padding-left: 10px;
 }
 
-.switch-button{
+.switch-button-container {
+    margin-top: 18.76px;
+    margin-bottom: 18.76px;
+    margin-left: auto;
+    margin-right: 15px;
+}
+
+.switch-button {
     min-width: 148px;
 }
 
@@ -84,6 +90,6 @@
     position: relative;
 }
 
-.random-column{
+.random-column {
     margin-left: 15px;
 }
